--- a/wwwroot/index.html
+++ b/wwwroot/index.html
@@ -2,10 +2,10 @@
 <html lang="en">
 <head>
     <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>TravelMania</title>
     <link rel="stylesheet" href="/lib/bootstrap/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="/index.css" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://unpkg.com/htmx.org@1.6.0/dist/htmx.min.js"></script>
     <style>
         .modal .bg-dark {
@@ -44,11 +44,11 @@
             </nav>
 
             <section id="Home">
-                <div class="text-center mt-5 pt-5">
-                    <h1 class="display-1 text-light custom-bold-head pt-4 mt-4">TravelMania</h1>
+                <div class="text-center">
+                    <h1 class="display-1 text-light custom-bold-head pt-lg-4 mt-lg-4">TravelMania</h1>
                     <h4 class="display-7 text-light font-weight-bold">Plan. Pack. Proceed.</h4>
                 </div>
-                <div class="d-flex justify-content-center align-items-center p-5 m-5">
+                <div class="d-flex justify-content-center align-items-center p-3 m-3">
                     <form class="col-10 row-md-4 bg-opacity-50">
                         <input class="form-control custom-placeholder custom-input p-3 bg-info bg-opacity-60 rounded-pill" type="search" placeholder="Enter your dream destination..." aria-label="Search">
                     </form>
