--- a/wwwroot/index.html
+++ b/wwwroot/index.html
@@ -17,7 +17,7 @@
 <body>
     <header class="custom-header">
         <div class="custom-header-overlay">
-            <nav class="navbar navbar-expand-lg navbar-toggleable-md navbar-dark bg-dark bg-opacity-50 mb-5 shadow-lg">
+            <nav class="navbar navbar-expand-lg navbar-toggleable-md navbar-dark bg-dark border-0 bg-opacity-50 mb-5 shadow-lg">
                 <div class="container">
                     <a class="navbar-brand" href="/Index">TM</a>
                     <button class="navbar-toggler ms-auto" type="button" data-bs-toggle="collapse" data-bs-target=".navbar-collapse" aria-controls="navbarSupportedContent"
@@ -44,7 +44,7 @@
             </nav>
 
             <section id="Home">
-                <div class="text-center">
+                <div class="text-center  mt-5 pt-5">
                     <h1 class="display-1 text-light custom-bold-head pt-lg-4 mt-lg-4">TravelMania</h1>
                     <h4 class="display-7 text-light font-weight-bold">Plan. Pack. Proceed.</h4>
                 </div>
@@ -114,7 +114,7 @@
     <div class="modal fade" id="adminModal" tabindex="-1" role="dialog" aria-labelledby="adminModalLabel" aria-hidden="true">
         <div class="modal-dialog modal-lg" role="document">
             <div class="modal-content bg-dark text-light">
-                <div class="modal-header bg-dark">
+                <div class="modal-header bg-dark border-0">
                     <h5 class="modal-title" id="adminModalLabel">Admin View - Testimonials</h5>
                     <button type="button" class="btn-close btn-close-white" data-bs-dismiss="modal" aria-label="Close"></button>
                 </div>
@@ -124,7 +124,7 @@
                         <!-- Testimonials will be dynamically added here -->
                     </ul>
                 </div>
-                <div class="modal-footer bg-dark">
+                <div class="modal-footer bg-dark border-0">
                     <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
                     <button type="button" class="btn btn-light" onclick="addTestimonial()">New</button>
                 </div>
@@ -136,7 +136,7 @@
     <div class="modal rounded fade" id="testimonialModal" tabindex="-1" role="dialog" aria-labelledby="testimonialModalLabel" aria-hidden="true">
         <div class="modal-dialog modal-lg" role="document">
             <div class="modal-content bg-dark text-light">
-                <div class="modal-header bg-dark">
+                <div class="modal-header bg-dark border-0">
                     <h5 class="modal-title" id="testimonialModalLabel">Edit Testimonial</h5>
                     <button type="button" class="btn-close btn-close-white" data-bs-dismiss="modal" aria-label="Close"></button>
                 </div>
@@ -159,7 +159,7 @@
                         <textarea class="form-control rounded" placeholder="Review..." id="testimonialReview" maxlength="100" rows="3" required></textarea>
                     </div>
                 </div>
-                <div class="modal-footer bg-dark">
+                <div class="modal-footer bg-dark border-0">
                     <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
                     <button type="button" id="saveTestimonialBtn" class="btn btn-primary">Save</button>
                 </div>
@@ -251,7 +251,7 @@
                 li.classList.add('list-group-item');
                 li.classList.add('bg-dark');
                 li.innerHTML = `
-                    <div class="p-3 mb-2 bg-dark text-light">
+                    <div class="p-3 mb-2 bg-dark border-0 text-light">
                         <h5>${testimonial.name}</h5>
                         <p>Destination: ${testimonial.destinationName}</p>
                         <p>Rating: ${testimonial.rating}</p>
