--- a/wwwroot/index.html
+++ b/wwwroot/index.html
@@ -14,13 +14,8 @@
     </style>
 </head>
 <body>
-    <div id="loader">
-        <div class="spinner"></div>
-        <div class="loading-text">Loading...</div>
-    </div>
-    <div id="content" style="display: none;">
         <header class="custom-header">
-            <div class="custom-header-overlay mb-5">
+            <div class="custom-header-overlay">
                 <nav class="navbar navbar-expand-lg navbar-toggleable-md navbar-dark bg-dark border-0 bg-opacity-50 pb-3 shadow-lg">
                     <div class="container">
                         <a class="navbar-brand" href="/Index">TM</a>
@@ -178,14 +173,9 @@
                 Copyright &copy; designed and developed by Farida Moukhtar
             </div>
         </footer>
-    </div>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
     <script>
-        window.addEventListener('load', () => {
-            document.getElementById('loader').style.display = 'none';
-            document.getElementById('content').style.display = 'block';
-        });
 
         document.addEventListener('DOMContentLoaded', function () {
             UpdateTestimonials();
