--- a/wwwroot/index.html
+++ b/wwwroot/index.html
@@ -14,8 +14,12 @@
     </style>
 </head>
 <body>
-    <header class="custom-header">
-        <div class="custom-header-overlay">
+    <div class="custom-header-bg">
+
+    </div>
+    <main role="main" class="custom-main">
+
+        <header class="custom-header">
             <nav class="navbar navbar-expand-lg navbar-toggleable-md navbar-dark bg-dark border-0 bg-opacity-50 pb-3 shadow-lg">
                 <div class="container">
                     <a class="navbar-brand" href="/Index">TM</a>
@@ -53,11 +57,10 @@
                     </form>
                 </div>
             </section>
-        </div>
-    </header>
+        </header>
 
-    <div class="container mt-5 pt-5 pb-5 mb-5">
-        <main role="main">
+        <div class="container mt-5 pt-5 pb-5 mb-5">
+
             <section id="Most-Visited">
                 <div class="text-left text-light">
                     <h1 class="display-4 custom-bold-sub">Most Visited</h1>
@@ -106,8 +109,8 @@
                     </button>
                 </div>
             </section>
-        </main>
-    </div>
+        </div>
+    </main>
 
     <!-- Admin Modal -->
     <div class="modal fade" id="adminModal" tabindex="-1" role="dialog" aria-labelledby="adminModalLabel" aria-hidden="true">
@@ -174,6 +177,7 @@
         </div>
     </footer>
 
+
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 
@@ -215,21 +219,21 @@
                         var carouselItem = document.createElement('div');
                         carouselItem.className = 'carousel-item opacity-80' + (index === 0 ? ' active' : '');
                         var innerHtmlTestimonial = `
-                                                    <div class="carousel-card p-4 text-left">
-                                                        <h4 class="text-light custom-bold-sub">${item.name}</h4>
-                                                        <div class="row d-inline px-0 mx-0 my-3">
-                                                            <h6 class="text-light custom-light-sub d-inline mx-0 px-0">${item.destinationName} • </h6>
-                                                            <div class="d-inline mx-0 px-0">
-                                                    `;
+                                                                <div class="carousel-card p-4 text-left">
+                                                                    <h4 class="text-light custom-bold-sub">${item.name}</h4>
+                                                                    <div class="row d-inline px-0 mx-0 my-3">
+                                                                        <h6 class="text-light custom-light-sub d-inline mx-0 px-0">${item.destinationName} • </h6>
+                                                                        <div class="d-inline mx-0 px-0">
+                                                                `;
                         for (var i = 0; i < item.rating; i++) {
                             innerHtmlTestimonial += `<img src="/assets/star.svg" alt="Star" class="star-icon mx-0 px-0" />`;
                         }
                         innerHtmlTestimonial += `
-                                                    </div>
-                                                        </div>
-                                                            <h6 class="text-light custom-light-sub px-0 mx-0 my-3">${item.review}</h6>
-                                                        </div>
-                                                    `;
+                                                                </div>
+                                                                    </div>
+                                                                        <h6 class="text-light custom-light-sub px-0 mx-0 my-3">${item.review}</h6>
+                                                                    </div>
+                                                                `;
                         carouselItem.innerHTML = innerHtmlTestimonial;
                         carouselInner.appendChild(carouselItem);
                     });
@@ -249,15 +253,15 @@
                 li.classList.add('list-group-item');
                 li.classList.add('bg-dark');
                 li.innerHTML = `
-                                            <div class=" bg-dark border-0 text-light">
-                                                <h5>${testimonial.name}</h5>
-                                                <p>Destination: ${testimonial.destinationName}</p>
-                                                <p>Rating: ${testimonial.rating}</p>
-                                                <p>Review: ${testimonial.review}</p>
-                                                <button class="btn btn-secondary btn-sm" onclick="deleteTestimonial(${testimonial.id})">Delete</button>
-                                                <button class="btn btn-light btn-sm" onclick="editTestimonial('${index}')">Edit</button>
-                                            </div>
-                                            `;
+                                                        <div class=" bg-dark border-0 text-light">
+                                                            <h5>${testimonial.name}</h5>
+                                                            <p>Destination: ${testimonial.destinationName}</p>
+                                                            <p>Rating: ${testimonial.rating}</p>
+                                                            <p>Review: ${testimonial.review}</p>
+                                                            <button class="btn btn-secondary btn-sm" onclick="deleteTestimonial(${testimonial.id})">Delete</button>
+                                                            <button class="btn btn-light btn-sm" onclick="editTestimonial('${index}')">Edit</button>
+                                                        </div>
+                                                        `;
                 testimonialsList.appendChild(li);
             });
         }
