--- a/wwwroot/index.html
+++ b/wwwroot/index.html
@@ -27,7 +27,7 @@
                             aria-expanded="false" aria-label="Toggle navigation">
                         <span class="navbar-toggler-icon"></span>
                     </button>
-                    <div class="navbar-collapse navbar-right collapse  d-lg-flex justify-content-end">
+                    <div class="navbar-collapse navbar-right collapse">
                         <ul class="navbar-nav" id="navbar-selections">
                             <li class="nav-item">
                                 <a class="nav-link active" href="#Home">Home</a>
@@ -67,19 +67,26 @@
                 </div>
                 <div class="horizontal-container pb-5">
                     <div class="img-item">
-                        <img src="/assets/dubai.webp" alt="dubai" class="custom-img">
+                        <img srcset="/assets/DubaiMobile.webp 200w, /assets/dubai.webp 900w"
+                             sizes="(max-width: 600px) 200px,900px"
+                             src="/assets/dubai.webp" alt="dubai" class="custom-img" />
                         <h4 class="text-light">
                             Dubai
                         </h4>
                     </div>
                     <div class="img-item">
-                        <img src="/assets/rome.webp" alt="rome" class="custom-img">
+                        <img srcset="/assets/romemobile.webp 200w, /assets/rome.webp 900w"
+                             sizes="(max-width: 600px) 200px,900px"
+                             src="/assets/rome.webp" alt="rome" class="custom-img" />
                         <h4 class="text-light">
                             Rome
                         </h4>
                     </div>
                     <div class="img-item">
-                        <img src="/assets/bali.webp" alt="bali" class="custom-img">
+                        <img
+                             srcset="/assets/baliMobile.webp 200w, /assets/bali.webp 900w"
+                             sizes="(max-width: 600px) 200px,900px"
+                             src="/assets/bali.webp" alt="bali" class="custom-img" />
                         <h4 class="text-light">
                             Bali
                         </h4>
